  with an OPAM package called "num".
  (Xavier Leroy)

- GPR#1217: Restrict Unix.environment in privileged contexts; add
  Unix.unsafe_environment.
  (Jeremy Yallop, review by Mark Shinwell, Nicolás Ojeda Bär,
  Damien Doligez and Hannes Mehnert)

- GPR#1321: Reimplement Unix.isatty on Windows. It no longer returns true for
  the null device.
  (David Allsopp)

### Compiler user-interface and warnings:

- MPR#7361, GPR#1248: support "ocaml.warning" in all attribute contexts, and
  arrange so that "ocaml.ppwarning" is correctly scoped by surrounding
  "ocaml.warning" attributes
  (Alain Frisch, review by Florian Angeletti and Thomas Refis)

- MPR#7444, GPR#1138: trigger deprecation warning when a "deprecated"
  attribute is hidden by signature coercion
  (Alain Frisch, report by bmillwood, review by Leo White)

- MPR#7472: ensure .cmi files are created atomically,
  to avoid corruption of .cmi files produced simultaneously by a run
  of ocamlc and a run of ocamlopt.
  (Xavier Leroy, from a suggestion by Gerd Stolpmann)

* MPR#7514, GPR#1152: add -dprofile option, similar to -dtimings but
  also displays memory allocation and consumption.
  The corresponding addition of a new compiler-internal
  Profile module may affect some users of
  compilers-libs/ocamlcommon (by creating module conflicts).
  (Valentin Gatien-Baron, report by Gabriel Scherer)

- MPR#7620, GPR#1317: Typecore.force_delayed_checks does not run with -i option
  (Jacques Garrigue, report by Jun Furuse)

- MPR#7624: handle warning attributes placed on let bindings
  (Xavier Clerc, report by dinosaure, review by Alain Frisch)

- GPR#896: "-compat-32" is now taken into account when building .cmo/.cma
  (Hugo Heuzard)

- GPR#948: the compiler now reports warnings-as-errors by prefixing
  them with "Error (warning ..):", instead of "Warning ..:" and
  a trailing "Error: Some fatal warnings were triggered" message.
  (Valentin Gatien-Baron, review by Alain Frisch)
