@@ -29,7 +29,10 @@
 #define HAS_GETHOSTNAME
 #define HAS_MKTIME
 #define HAS_PUTENV
+#ifndef __MINGW32__
 #define HAS_LOCALE
+#define HAS_STRTOD_L
+#endif
 #define HAS_BROKEN_PRINTF
 #define HAS_IPV6
 #define HAS_NICE
